// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StructuredList /> should render correctly with a custom CSS class 1`] = `
<div>
  <section
    class="structured-list custom-class"
  >
    <div
      class="structured-list-tbody"
    >
      <div
        class="structured-list-row"
      >
        <div
          class="structured-list-td structured-list-content--nowrap"
          data-testid="data_id-0-Email"
        >
          Email
        </div>
        <div
          class="structured-list-td"
          data-testid="email-value"
        >
          example@example.com
        </div>
      </div>
      <div
        class="structured-list-row"
      >
        <div
          class="structured-list-td structured-list-content--nowrap"
          data-testid="data_id-1-Fullname"
        >
          Fullname
        </div>
        <div
          class="structured-list-td"
          data-testid="full-name-value"
        >
          Mr John Doe
        </div>
      </div>
      <div
        class="structured-list-row"
      >
        <div
          class="structured-list-td structured-list-content--nowrap"
          data-testid="data_id-2-Mobile"
        >
          Mobile
        </div>
        <div
          class="structured-list-td"
          data-testid="mobile-value"
        >
          012100000
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<StructuredList /> should render with required props 1`] = `
<div>
  <section
    class="structured-list"
  >
    <div
      class="structured-list-tbody"
    >
      <div
        class="structured-list-row"
      >
        <div
          class="structured-list-td structured-list-content--nowrap"
          data-testid="data_id-0-Email"
        >
          Email
        </div>
        <div
          class="structured-list-td"
          data-testid="email-value"
        >
          example@example.com
        </div>
      </div>
      <div
        class="structured-list-row"
      >
        <div
          class="structured-list-td structured-list-content--nowrap"
          data-testid="data_id-1-Fullname"
        >
          Fullname
        </div>
        <div
          class="structured-list-td"
          data-testid="full-name-value"
        >
          Mr John Doe
        </div>
      </div>
      <div
        class="structured-list-row"
      >
        <div
          class="structured-list-td structured-list-content--nowrap"
          data-testid="data_id-2-Mobile"
        >
          Mobile
        </div>
        <div
          class="structured-list-td"
          data-testid="mobile-value"
        >
          012100000
        </div>
      </div>
    </div>
  </section>
</div>
`;
